Started building out state management